# SPDX-License-Identifier: GPL-2.0-only
#
# (C) Copyright IBM Corp. 2018, 2019
# Author: Sourabh Jain <sourabhjain@linux.ibm.com>


[metadata]
name: ServiceReport
description: FFDC validation tool
long_description: Validation tool to verify First Failure Data Capture (FFDC) configurations
author: Sourabh Jain
author_email: sourabhjain@linux.ibm.com
