# SPDX-License-Identifier: GPL-2.0-only
#
# (C) Copyright IBM Corp. 2018, 2019
# Author: Sourabh Jain <sourabhjain@linux.ibm.com>

[metadata]
name = ServiceReport
version = attr: servicereportpkg.get_version
author = Sourabh Jain
author_email = sourabhjain@linux.ibm.com
description = FFDC validation tool
long_description = file: README.md
license = GPL-2.0-only
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
packages = find:

[options.entry_points]
console_scripts =
    servicereport = servicereportpkg:main
